// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@overflow-menu: component checks * component renders properly 1`] = `
<ForwardRef(WrappingElement)
  appearance="default"
  content={
    <View>
      <ForwardRef(WrappingElement)
        icon={[Function]}
        index={0}
        isLastItem={false}
        onPress={[Function]}
        style={
          Object {
            "borderTopLeftRadius": 6,
            "borderTopRightRadius": 6,
          }
        }
        text="Menu Item 1"
      />
      <ForwardRef(WrappingElement)
        disabled={true}
        icon={[Function]}
        index={1}
        isLastItem={false}
        onPress={[Function]}
        text="Menu Item 2"
      />
      <ForwardRef(WrappingElement)
        index={2}
        isLastItem={false}
        onPress={[Function]}
        text="Menu Item 3"
      />
      <ForwardRef(WrappingElement)
        icon={[Function]}
        index={3}
        isLastItem={true}
        onPress={[Function]}
        style={
          Object {
            "borderBottomLeftRadius": 6,
            "borderBottomRightRadius": 6,
          }
        }
        text="Menu Item 4"
      />
    </View>
  }
  dispatch={[Function]}
  indicatorOffset={2}
  items={
    Array [
      Object {
        "icon": [Function],
        "text": "Menu Item 1",
      },
      Object {
        "disabled": true,
        "icon": [Function],
        "text": "Menu Item 2",
      },
      Object {
        "text": "Menu Item 3",
      },
      Object {
        "icon": [Function],
        "text": "Menu Item 4",
      },
    ]
  }
  onRequestClose={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 6,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
  visible={true}
>
  <View />
</ForwardRef(WrappingElement)>
`;

exports[`@overflow-menu: component checks * single menu-item 1`] = `
<ForwardRef(WrappingElement)
  appearance="default"
  content={
    <View>
      <ForwardRef(WrappingElement)
        icon={[Function]}
        index={0}
        isLastItem={true}
        onPress={[Function]}
        style={
          Object {
            "borderRadius": 6,
          }
        }
        text="Menu Item 1"
      />
    </View>
  }
  dispatch={[Function]}
  indicatorOffset={2}
  items={
    Array [
      Object {
        "icon": [Function],
        "text": "Menu Item 1",
      },
    ]
  }
  onRequestClose={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 6,
      },
      undefined,
    ]
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
  visible={true}
>
  <View />
</ForwardRef(WrappingElement)>
`;

exports[`@overflow-menu-item: component checks * menu item active checks 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  isLastItem={false}
  onLongPress={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderBottomColor": "#DDE1EB",
        "borderBottomWidth": 1.2,
        "minHeight": 48,
        "padding": 12,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
  text="Test Menu Item"
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(WrappingElement)
    style={
      Object {
        "color": "#3366FF",
        "fontSize": 15,
        "fontWeight": "600",
        "marginHorizontal": 8,
      }
    }
  >
    Test Menu Item
  </ForwardRef(WrappingElement)>
</TouchableOpacity>
`;

exports[`@overflow-menu-item: component checks * menu item active checks 2`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  dispatch={[Function]}
  isLastItem={false}
  onLongPress={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderBottomColor": "#DDE1EB",
        "borderBottomWidth": 1.2,
        "minHeight": 48,
        "padding": 12,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
  text="Test Menu Item"
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(WrappingElement)
    style={
      Object {
        "color": "#0D1C2E",
        "fontSize": 15,
        "fontWeight": "600",
        "marginHorizontal": 8,
      }
    }
  >
    Test Menu Item
  </ForwardRef(WrappingElement)>
</TouchableOpacity>
`;

exports[`@overflow-menu-item: component checks * menu item with "set-1" props 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  disabled={true}
  dispatch={[Function]}
  icon={[Function]}
  isLastItem={false}
  onLongPress={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "#8992A3",
        "borderBottomColor": "#DDE1EB",
        "borderBottomWidth": 1.2,
        "minHeight": 48,
        "padding": 12,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
  text="Test Menu Item"
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <Component
    source={
      Object {
        "uri": "https://akveo.github.io/eva-icons/fill/png/128/star.png",
      }
    }
    style={
      Object {
        "height": 24,
        "marginHorizontal": 8,
        "tintColor": "#0D1C2E",
        "width": 24,
      }
    }
  />
  <ForwardRef(WrappingElement)
    style={
      Object {
        "color": "#0D1C2E",
        "fontSize": 15,
        "fontWeight": "600",
        "marginHorizontal": 8,
      }
    }
  >
    Test Menu Item
  </ForwardRef(WrappingElement)>
</TouchableOpacity>
`;

exports[`@overflow-menu-item: component checks * menu item with "set-2" props 1`] = `
<TouchableOpacity
  activeOpacity={1}
  appearance="default"
  disabled={false}
  dispatch={[Function]}
  isLastItem={true}
  onLongPress={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderBottomColor": null,
        "borderBottomWidth": null,
        "minHeight": 48,
        "padding": 12,
      },
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
  text="Test Menu Item"
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ForwardRef(WrappingElement)
    style={
      Object {
        "color": "#0D1C2E",
        "fontSize": 15,
        "fontWeight": "600",
        "marginHorizontal": 8,
      }
    }
  >
    Test Menu Item
  </ForwardRef(WrappingElement)>
</TouchableOpacity>
`;
